
UTILITIES

    o tweak the display of progress information in `seqVCF2GDS()`

    o `seqVCF_Header(, getnum=TRUE, verbose=TRUE)` to show the progress
      information for scanning the VCF file

    o new `seqGetData(, "$dosage_alt2")` and `seqGetData(, "$dosage_sp2")` for
      sex chromosomes, when the alleles are partially missing (e.g., genotypes
      on chromosome X for males)


CHANGES IN VERSION 1.42.3
-------------------------

BUG FIXES

    o `seqGetData(, "$dosage_alt")` and `seqGetData(, "$dosage_sp")` work
      correctly when the ploidy is >2 and there are missing alleles

    o fix a bug that `seqParallel()` does not call a user-defined '.combine'
      when 'parallel=1'


CHANGES IN VERSION 1.42.1
-------------------------

UTILITIES

    o update the help files of `seqBlockApply()` and `seqUnitApply()`

    o detect the output filename extension in `seqGDS2VCF()` without
      considering the case of the characters, supporting .gz, .bgz, .bz and .xz
      as a filename extension

    o fix the compiler warning: -Wformat-security

    o new option 'include.pheno=TRUE' in `seqBED2GDS()`


CHANGES IN VERSION 1.42.0
-------------------------

UTILITIES

    o new option 'write.rsid' in `seqGDS2BED()`


CHANGES IN VERSION 1.40.1
-------------------------

BUG FIXES

    o `seqAddValue(gdsfile, varnm="position")` works correctly


CHANGES IN VERSION 1.40.0
-------------------------

    o fix the compiler warning: sprintf is deprecated


CHANGES IN VERSION 1.38.0
-------------------------

UTILITIES

    o new option 'ext_nbyte' in `seqGet2bGeno()`

    o `seqAlleleCount()` and `seqGetAF_AC_Missing()` return NA instead of zero
      when all genotypes are missing at a site

    o `seqGDS2VCF()` does not output the FORMAT column if there is no selected
      sample (e.g., site-only VCF files)

    o `seqGetData(, "$chrom_pos2")` is similar to `seqGetData(, "$chrom_pos")`
      except the duplicates with the suffix ("_1", "_2" or >2)

NEW FEATURES
